@@ -1,1 +1,1 @@
-#define KPANEL_VERSION "kpanel-0.17.5"
+#define KPANEL_VERSION "kpanel-0.17.6"
